# better_rspw

./: Cargo.toml  README.md
src/: main.rs
src/benches/: main.rs
src/gui/: main.rs
src/lib/: config.rs  menu.rs  mod.rs  util.rs
src/tgui/: main.rs
wordlists/: xato-net-10-million-passwords-1000000.txt
