[package]
name = "rspw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
colorful = "0.2.1"
crossterm = "0.25.0"
eframe = "0.19.0"
egui = "0.19.0"
inquire = "0.3.0"
rand = "0.8.5"
termion = "1.5.6"
tui = { version = "0.19.0", features = ["termion"] }
