[package]
name = "rspw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "2.1.1"
clap = { version = "3.2.17", features = ["derive"] }
colorful = "0.2.1"
criterion = { version = "0.3.6", features = ["html_reports"] }
crossterm = "0.25.0"
eframe = "0.19.0"
egui = "0.19.0"
egui-toast = "0.3.0"
inquire = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
termion = "1.5.6"
tui = { version = "0.19.0", features = ["termion"] }
